--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <link rel="stylesheet" href="resources/css/style.css">
   </head>
   <body>
+<!--Company header and navigation-->
+<header>
+  <div class="container">
+    <nav class="container">
+      <div>
+        <img src="resources/images/ic-logo.svg" alt="Colmar Academy Lion">
+        <span>COLMARACADEMY</span>
+      </div>
+      <ul class="main">
+        <li>On campus</li>
+        <li>Online</li>
+        <li>For companies</li>
+        <li>Sign in</li>
+      </ul>
+    </nav>
+ </header>
+<!--Main-Banner-->
+  <div class="flex">
+    <div class="main-banner">
+      <img src="resources/images/banner.jpg" alt="Students studying">
+
+      <h1> Learn something new everyday</h1>
+      <p>Lorem ipsum dolor sit amet, consectuetur adipiscing elit.</p>
+      <span>Start here</span>
+    </div>
+  </div>
+
+  </div>
 
   </body>
 </html>
