--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <header>
   <div class="container">
     <nav class="container">
-      <div>
+      <div class="somediv">
         <img src="resources/images/ic-logo.svg" alt="Colmar Academy Lion">
-        <span>COLMARACADEMY</span>
+        <span class="moreweight">COLMAR</span>ACADEMY
       </div>
       <ul class="main">
         <li>On campus</li>
@@ -24,17 +24,13 @@
     </nav>
  </header>
 <!--Main-Banner-->
-  <div class="flex">
-    <div class="main-banner">
-      <img src="resources/images/banner.jpg" alt="Students studying">
-
-      <h1> Learn something new everyday</h1>
-      <p>Lorem ipsum dolor sit amet, consectuetur adipiscing elit.</p>
-      <span>Start here</span>
+     <div class="flex">
+       <img src="resources/images/banner.jpg" alt="Students studying">
+       <div class="main-banner">
+         <h1> Learn something new everyday</h1>
+         <h2>Lorem ipsum dolor sit amet, consectuetur adipiscing elit.</h2>
+         <span>Start here</span>
+     </div>
     </div>
-  </div>
-
-  </div>
-
   </body>
 </html>
