--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>Colmar Academy</title>
     <link rel="stylesheet" href="resources/css/reset.css">
     <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="icon" href="resources/images/favicon.ico" type="image/x-icon">
   </head>
   <body>
 <!--Company header and navigation-->
 <header>
   <div class="container">
     <nav class="container">
-      <div class="somediv">
+      <div class="academy-title">
         <img src="resources/images/ic-logo.svg" alt="Colmar Academy Lion">
         <span class="moreweight">COLMAR</span>ACADEMY
       </div>
@@ -27,9 +28,9 @@
      <div class="flex">
        <img src="resources/images/banner.jpg" alt="Students studying">
        <div class="main-banner">
-         <h1> Learn something new everyday</h1>
-         <h2>Lorem ipsum dolor sit amet, consectuetur adipiscing elit.</h2>
-         <span>Start here</span>
+         <h1>Learn something new everyday</h1>
+         <h2>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</h2>
+         <span class="button">Start here</span>
      </div>
     </div>
   </body>
