--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
   <head>
     <meta charset="utf-8">
@@ -25,13 +25,23 @@
     </nav>
  </header>
 <!--Main-Banner-->
-     <div class="flex">
-       <img src="resources/images/banner.jpg" alt="Students studying">
-       <div class="main-banner">
-         <h1>Learn something new everyday</h1>
-         <h2>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</h2>
-         <span class="button">Start here</span>
+     <div class="container1">
+       <div class="item1">
+         <img src="resources/images/banner.jpg" alt="Students studying">
      </div>
-    </div>
+       <div class="item2">
+         <div class="item-a">
+           <h1>Learn something new everyday</h1>
+         </div>
+         <div class="item2-b">
+           <h2>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</h2>
+         </div>
+         <div class="item2-c">
+          <span class="button">Start here</span>
+        </div>
+       </div>
+
+
+     </div>
   </body>
 </html>
