--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
      <div class="container1">
        <div class="item1">
          <img src="resources/images/banner.jpg" alt="Students studying">
-     </div>
+       </div>
        <div class="item2">
          <div class="item-a">
-           <h1>Learn something new everyday</h1>
+           <h1>Learn something <br> new everyday</h1>
          </div>
          <div class="item2-b">
            <h2>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</h2>
@@ -40,8 +40,6 @@
           <span class="button">Start here</span>
         </div>
        </div>
-
-
      </div>
   </body>
 </html>
