added media querry and container2 content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <body>
 <!--Company header and navigation-->
 <header>
-  <div class="container">
     <nav class="container">
       <div class="academy-title">
         <img src="resources/images/ic-logo.svg" alt="Colmar Academy Lion">
@@ -22,9 +21,17 @@
         <li>For companies</li>
         <li>Sign in</li>
       </ul>
+      <ul class="mobile">
+        <li><img src="resources/images/ic-logo.svg" alt="Colmar Academy Lion"></li>
+        <li><img src="resources/images/ic-on-campus.svg" alt="on campus student desk"></li>
+        <li><img src="resources\images\ic-online.svg" alt="online learning"></li>
+        <li><img src="resources\images\ic-login.svg" alt="login"></li>
+      </ul>
     </nav>
  </header>
+
 <!--Main-Banner-->
+<!--Container1-->
      <div class="container1">
        <div class="item1">
          <img src="resources/images/banner.jpg" alt="Students studying">
@@ -41,5 +48,35 @@
         </div>
        </div>
      </div>
+<!--Container 2-->
+     <div class="container2">
+      <div class="item2-1">
+         <img src="resources\images\information-main.jpg" alt="male reading information about course options">
+         <h2>It doesn't hurt to keep practicing</h2>
+         <p>Mel nihil insolens te, ei sea dolore dolorem quaerendum.
+           Inimicus hendrerit pri ad. Ei imperdiet reprimique consectetuer eum. Prima civibus id eam.
+           Eu ridens explicari scripserit est, eu mei scripta expetendis temporibus.</p>
+          <p> Emanuel, Sr Strategist at Hiring.com</p>
+       </div>
+      <div class="item2-2">
+         <div class="item2-2-a">
+            <img src="resources\images\information-orientation.jpg" alt="Orientation date, image of people walkin on cobble stone">
+            <h3>Orientation date</h3>
+            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+            <span>Read more</span>
+         </div>
+         <div class="item2-3-b">
+            <img src="resources\images\information-campus.jpg" alt="Our campus, image of library">
+            <h3>Our campus</h3>
+            <p>Find which campus is close by you</p>
+            <span>Read more</span>
+         </div>
+         <div class="item2-4-c">
+            <img src="resources\images\information-guest-lecture.jpg" alt="Our guest lectures, image showing guest lecture">
+            <h3>Our guest lecture</h3>
+            <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+            <span>Read more</span>
+         </div>
+      </div>
   </body>
 </html>
