added flexbox to container2 items

--- a/index.html
+++ b/index.html
@@ -61,22 +61,29 @@
       <div class="item2-2">
          <div class="item2-2-a">
             <img src="resources\images\information-orientation.jpg" alt="Orientation date, image of people walkin on cobble stone">
-            <h3>Orientation date</h3>
-            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <span>Read more</span>
+          <div class="item-description">
+              <h3 class="item-description">Orientation date</h3>
+              <p class="item-description">Tue 10/11 & Wed 10/12: 8am-3pm</p>
+              <span class="item-description">Read more</span>
+            </div>
          </div>
          <div class="item2-3-b">
             <img src="resources\images\information-campus.jpg" alt="Our campus, image of library">
-            <h3>Our campus</h3>
-            <p>Find which campus is close by you</p>
-            <span>Read more</span>
+           <div class="item-description">
+            <h3 class="item-description">Our campus</h3>
+            <p class="item-description">Find which campus is close by you</p>
+            <span class="item-description">Read more</span>
+            </div>
          </div>
          <div class="item2-4-c">
             <img src="resources\images\information-guest-lecture.jpg" alt="Our guest lectures, image showing guest lecture">
-            <h3>Our guest lecture</h3>
-            <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-            <span>Read more</span>
+           <div class="item-description">
+            <h3 class="item-description">Our guest lecture</h3>
+            <p class="item-description">Join a keynote with Oliver Sack about music in medical treatment</p>
+            <span class="item-description">Read more</span>
+            </div>
          </div>
       </div>
+    </div>
   </body>
 </html>
