added mobile nav

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <li>For companies</li>
         <li>Sign in</li>
       </ul>
-      <ul class="mobile">
-        <li><img src="resources/images/ic-logo.svg" alt="Colmar Academy Lion"></li>
-        <li><img src="resources/images/ic-on-campus.svg" alt="on campus student desk"></li>
-        <li><img src="resources\images\ic-online.svg" alt="online learning"></li>
-        <li><img src="resources\images\ic-login.svg" alt="login"></li>
-      </ul>
+    </nav>
+      <nav class="mobile">
+        <a href="#"> <img src="resources/images/ic-logo.svg" alt="Colmar Academy Lion"></a>
+        <a href="#"><img src="resources/images/ic-on-campus.svg" alt="on campus student desk"></a>
+        <a href="#"><img src="resources\images\ic-online.svg" alt="online learning"></a>
+        <a href="#"><img src="resources\images\ic-login.svg" alt="login"></a>
     </nav>
  </header>
 
@@ -52,17 +52,19 @@
      <div class="container2">
       <div class="item2-1">
          <img src="resources\images\information-main.jpg" alt="male reading information about course options">
-         <h2>It doesn't hurt to keep practicing</h2>
+         <h1>It doesn't hurt to keep practicing</h1>
          <p>Mel nihil insolens te, ei sea dolore dolorem quaerendum.
            Inimicus hendrerit pri ad. Ei imperdiet reprimique consectetuer eum. Prima civibus id eam.
            Eu ridens explicari scripserit est, eu mei scripta expetendis temporibus.</p>
+          <p></p>
+          <p></p>
           <p> Emanuel, Sr Strategist at Hiring.com</p>
        </div>
       <div class="item2-2">
          <div class="item2-2-a">
             <img src="resources\images\information-orientation.jpg" alt="Orientation date, image of people walkin on cobble stone">
           <div class="item-description">
-              <h3 class="item-description">Orientation date</h3>
+              <h2 class="item-description">Orientation date</h2>
               <p class="item-description">Tue 10/11 & Wed 10/12: 8am-3pm</p>
               <span class="item-description">Read more</span>
             </div>
@@ -70,20 +72,49 @@
          <div class="item2-3-b">
             <img src="resources\images\information-campus.jpg" alt="Our campus, image of library">
            <div class="item-description">
-            <h3 class="item-description">Our campus</h3>
+            <h2 class="item-description">Our campus</h2>
             <p class="item-description">Find which campus is close by you</p>
             <span class="item-description">Read more</span>
             </div>
          </div>
          <div class="item2-4-c">
             <img src="resources\images\information-guest-lecture.jpg" alt="Our guest lectures, image showing guest lecture">
-           <div class="item-description">
-            <h3 class="item-description">Our guest lecture</h3>
-            <p class="item-description">Join a keynote with Oliver Sack about music in medical treatment</p>
-            <span class="item-description">Read more</span>
+          <div class="item-description">
+            <h2 >Our guest lecture</h2>
+            <p >Join a keynote with Oliver Sack about music in medical treatment</p>
+            <span>Read more</span>
             </div>
          </div>
       </div>
     </div>
+
+<!--Mobile container2-->
+
+    <div class="mobile-container2">
+        <div class="mobile-item">
+          <img src="resources\images\information-orientation-mobile.jpg" alt="Orientation date, image of people walkin on cobble stone">
+          <div class="mobile-item-description">
+            <h2>Orientation date</h2>
+            <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+            <span>Read more</span>
+          </div>
+         </div>
+         <div class="mobile-item">
+            <img src="resources\images\information-campus-mobile.jpg" alt="Our campus, image of library">
+            <div class="mobile-item-description">
+            <h2>Our campus</h2>
+            <p>Find which campus is close by you</p>
+            <span>Read more</span>
+          </div>
+         </div>
+         <div class="mobile-item">
+            <img src="resources\images\information-guest-lecture-mobile.jpg" alt="Our guest lectures, image showing guest lecture">
+            <div class="mobile-item-description">
+            <h2>Our guest lecture</h2>
+            <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+            <span>Read more</span>
+          </div>
+         </div>
+      </div>
   </body>
 </html>
