--- a/index.html
+++ b/index.html
@@ -30,25 +30,22 @@
     </nav>
  </header>
 
-<!--Main-Banner-->
-<!--Container1-->
+<!--main-container-->
+<div class="main-container">
+
+<!--container1-->
      <div class="container1">
        <div class="item1">
          <img src="resources/images/banner.jpg" alt="Students studying">
        </div>
        <div class="item2">
-         <div class="item-a">
-           <h1>Learn something <br> new everyday</h1>
-         </div>
-         <div class="item2-b">
-           <h2>Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit.</h2>
-         </div>
-         <div class="item2-c">
-          <span class="button">Start here</span>
+         <h1>Learn something new everyday</h1>
+         <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+        <button> Start here</button>
         </div>
        </div>
-     </div>
-<!--Container 2-->
+
+<!--container 2-->
      <div class="container2">
       <div class="item2-1">
          <img src="resources\images\information-main.jpg" alt="male reading information about course options">
@@ -66,7 +63,7 @@
           <div class="item-description">
               <h2 class="item-description">Orientation date</h2>
               <p class="item-description">Tue 10/11 & Wed 10/12: 8am-3pm</p>
-              <span class="item-description">Read more</span>
+              <p class="item-description">Read more</p>
             </div>
          </div>
          <div class="item2-3-b">
@@ -74,21 +71,21 @@
            <div class="item-description">
             <h2 class="item-description">Our campus</h2>
             <p class="item-description">Find which campus is close by you</p>
-            <span class="item-description">Read more</span>
+            <p class="item-description">Read more</p>
             </div>
          </div>
          <div class="item2-4-c">
             <img src="resources\images\information-guest-lecture.jpg" alt="Our guest lectures, image showing guest lecture">
           <div class="item-description">
-            <h2 >Our guest lecture</h2>
-            <p >Join a keynote with Oliver Sack about music in medical treatment</p>
-            <span>Read more</span>
+            <h2 class="item-description">Our guest lecture</h2>
+            <p class="item-description">Join a keynote with Oliver Sack about music in medical treatment</p>
+            <p class="item-description">Read more</p>
             </div>
          </div>
       </div>
     </div>
 
-<!--Mobile container2-->
+<!--mobile container2-->
 
     <div class="mobile-container2">
         <div class="mobile-item">
@@ -96,7 +93,7 @@
           <div class="mobile-item-description">
             <h2>Orientation date</h2>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <span>Read more</span>
+            <p>Read more</p>
           </div>
          </div>
          <div class="mobile-item">
@@ -104,7 +101,7 @@
             <div class="mobile-item-description">
             <h2>Our campus</h2>
             <p>Find which campus is close by you</p>
-            <span>Read more</span>
+            <p>Read more</p>
           </div>
          </div>
          <div class="mobile-item">
@@ -112,9 +109,10 @@
             <div class="mobile-item-description">
             <h2>Our guest lecture</h2>
             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-            <span>Read more</span>
+            <p>Read more</p>
           </div>
          </div>
       </div>
+   </div>
   </body>
 </html>
