--- a/index.html
+++ b/index.html
@@ -113,6 +113,51 @@
           </div>
          </div>
       </div>
+      <!--container3-->
+
+      <div class="courses">
+        <div class="course-heading">
+          <h1>Start learning</h1>
+        </div>
+        <div class="course-list">
+          <div class="course-items">
+          <img src="resources\images\course-software.jpg" alt="Software engineering course">
+          <h2>Software engineering</h2>
+          <p>courses</p>
+          <p>Web Development, Mobile Development, iOT, API's</p>
+        </div>
+        <div class="course-items">
+          <img src="resources\images\course-computer-art.jpg" alt="Computer art course,person holding phone">
+          <h2>Computer art</h2>
+          <p>courses</p>
+          <p>Imaging & Design, Web Design, Motion Graphic & Visual Effects, Computer Animation</p>
+        </div>
+        <div class="course-items">
+          <img src="resources\images\course-design.jpg" alt="Design course, person with camera">
+          <h2>Design</h2>
+          <p>courses</p>
+          <p>User Experience Design, User Research, Visual Design</p>
+        </div>
+        <div class="course-items">
+          <img src="resources\images\course-data.jpg" alt="Data course, laptop with data graph">
+          <h2>Data</h2>
+          <p>courses</p>
+          <p>Data Science, Big Data, SQL, Data Visualisation</p>
+        </div>
+        <div class="course-items">
+          <img src="resources\images\course-business.jpg" alt="Business course. chess board">
+          <h2>Business</h2>
+          <p>courses</p>
+          <p>Product Development, Business Development, Startups</p>
+        </div>
+        <div class="course-items">
+          <img src="resources\images\course-marketing.jpg" alt="Marketing course, person with analysing watch">
+          <h2>Marketing</h2>
+          <p>courses</p>
+          <p>Analytics, Content Marketing, Mobile Marketing</p>
+        </div>
+      </div>
+    </div>
    </div>
   </body>
 </html>
