added mobile container3

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
        <div class="item1">
          <img src="resources/images/banner.jpg" alt="Students studying">
        </div>
-       <div class="item2">
+      <div class="item2">
          <h1>Learn something new everyday</h1>
          <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
         <button> Start here</button>
-        </div>
-       </div>
+      </div>
+    </div>
 
 <!--container 2-->
      <div class="container2">
@@ -168,8 +168,31 @@
             <p>Analytics, Content Marketing, Mobile Marketing</p>
           </div>
         </div>
+       </div>
       </div>
-    </div>
-   </div>
+      <!--mobile-container3-->
+      <div class="mobile-course-section">
+        <div class="mobile-course-list">
+          <div class="mobile-course-items">
+             <h2>Software engineering</h2>
+          </div>
+          <div class="mobile-course-items">
+           <h2>Computer art</h2>
+          </div>
+        </div>
+        <div class="mobile-course-items">
+            <h2>Design</h2>
+          </div>
+        <div class="mobile-course-items">
+            <h2>Data</h2>
+        </div>
+        <div class="mobile-course-items">
+            <h2>Business</h2>
+          </div>
+        <div class="mobile-course-items">
+            <h2>Marketing</h2>
+          </div>
+        </div>
+       </div>
   </body>
 </html>
