added container4 and footer

--- a/index.html
+++ b/index.html
@@ -193,6 +193,47 @@
             <h2>Marketing</h2>
           </div>
         </div>
-       </div>
+  <!--container4-->
+  <div class="thesis-header">
+    <h1>Thesis exhibit</h1>
+  </div>
+  <div class="thesis-container">
+   <div class="item-video">
+      <video src="resources\videos\thesis.mp4" controls autoplay poster="posterimage.jpg">
+      </video>
+      <div class="video-description">
+       <h1>Reimaging urban</h1>
+       <p>Mel nihil insolens te, ei sea dolore dolorem quaerendum.
+        Inimicus hendrerit pri ad. Ei imperdiet reprimique consectetuer eum. Prima civibus id eam.
+        Eu ridens explicari scripserit est, eu mei scripta expetendis temporibus.</p>
+      </div>
+    </div>
+   <div class="feature">
+     <div class="feature-item1">
+         <img src="resources\images\thesis-fisma.jpg" alt="Fisma, desk wit working material">
+       <div class="feature-description">
+           <h2 class="feature-description">Fisma: Design and Prototype</h2>
+           <p class="feature-description">Designer showcase of new prototype products</p>
+        </div>
+      </div>
+      <div class="feature-item2">
+         <img src="resources\images\thesis-now-and-then.jpg" alt="New York skyline">
+         <div class="feature-description">
+           <h2 class="feature-description">Now and then</h2>
+           <p class="feature-description">Research study about New York</p>
+         </div>
+      </div>
+    </div>
+   </div>
+ </div>
+ <!--footer-->
+
+<footer>
+  <div>@2016 Colmar Acadamy All rights reserved</div>
+  <div class="footer-links">
+    <a href="#">Terms</a>
+    <a href="#">Privacy</a>
+  </div>
+</footer>
   </body>
 </html>
