--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="resources/css/reset.css">
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="icon" href="resources/images/favicon.ico" type="image/x-icon">
+    <link href="<link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700|Raleway:400,400i" rel="stylesheet">" rel="stylesheet">
   </head>
   <body>
 <!--Company header and navigation-->
