--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="resources/css/reset.css">
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="icon" href="resources/images/favicon.ico" type="image/x-icon">
-    <link href="<link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700|Raleway:400,400i" rel="stylesheet">" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700|Raleway:400,400i" rel="stylesheet">
   </head>
   <body>
 <!--Company header and navigation-->
@@ -14,13 +14,14 @@
     <nav class="container">
       <div class="academy-title">
         <img src="resources/images/ic-logo.svg" alt="Colmar Academy Lion">
-        <span class="moreweight">COLMAR</span>ACADEMY
+        <span class="moreweight">COLMAR</span>
+        <span class="lightweight">ACADEMY</span>
       </div>
       <ul class="main">
-        <li>On campus</li>
-        <li>Online</li>
-        <li>For companies</li>
-        <li>Sign in</li>
+        <li><a href="#">On campus</a></li>
+        <li><a href="#">Online</a></li>
+        <li><a href="#">For companies</a></li>
+        <li><a href="#">Sign in</a></li>
       </ul>
     </nav>
       <nav class="mobile">
@@ -64,7 +65,7 @@
           <div class="item-description">
               <h2 class="item-description">Orientation date</h2>
               <p class="item-description">Tue 10/11 & Wed 10/12: 8am-3pm</p>
-              <p class="item-description">Read more</p>
+              <p class="item-description"> <a href="#">Read more</a></p>
             </div>
          </div>
          <div class="item2-3-b">
@@ -72,7 +73,7 @@
            <div class="item-description">
             <h2 class="item-description">Our campus</h2>
             <p class="item-description">Find which campus is close by you</p>
-            <p class="item-description">Read more</p>
+            <p class="item-description"><a href="#">Read more</a></p>
             </div>
          </div>
          <div class="item2-4-c">
@@ -80,7 +81,7 @@
           <div class="item-description">
             <h2 class="item-description">Our guest lecture</h2>
             <p class="item-description">Join a keynote with Oliver Sack about music in medical treatment</p>
-            <p class="item-description">Read more</p>
+            <p class="item-description"><a href="#">Read more</a></p>
             </div>
          </div>
       </div>
@@ -94,7 +95,7 @@
           <div class="mobile-item-description">
             <h2>Orientation date</h2>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <p>Read more</p>
+            <p><a href="#">Read more</a></p>
           </div>
          </div>
          <div class="mobile-item">
@@ -102,7 +103,7 @@
             <div class="mobile-item-description">
             <h2>Our campus</h2>
             <p>Find which campus is close by you</p>
-            <p>Read more</p>
+            <p><a href="#">Read more</a></p>
           </div>
          </div>
          <div class="mobile-item">
@@ -110,7 +111,7 @@
             <div class="mobile-item-description">
             <h2>Our guest lecture</h2>
             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-            <p>Read more</p>
+            <p><a href="#">Read more</a></p>
           </div>
          </div>
       </div>
