--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width">
     <title>Colmar Academy</title>
     <link rel="stylesheet" href="resources/css/reset.css">
     <link rel="stylesheet" href="resources/css/style.css">
