--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
         <span class="moreweight">COLMAR</span>
         <span class="lightweight">ACADEMY</span>
       </div>
-      <ul class="main">
-        <li><a href="#">On campus</a></li>
-        <li><a href="#">Online</a></li>
-        <li><a href="#">For companies</a></li>
-        <li><a href="#">Sign in</a></li>
+      <ul class="main" role="presentation">
+        <li><a href="#" title="On campus">On campus</a></li>
+        <li><a href="#" title="Online">Online</a></li>
+        <li><a href="#" title="For companies">For companies</a></li>
+        <li><a href="#" title="Sign in">Sign in</a></li>
       </ul>
     </nav>
       <nav class="mobile">
-        <a href="#"> <img src="resources/images/ic-logo.svg" alt="Colmar Academy Lion"></a>
-        <a href="#"><img src="resources/images/ic-on-campus.svg" alt="on campus student desk"></a>
-        <a href="#"><img src="resources\images\ic-online.svg" alt="online learning"></a>
-        <a href="#"><img src="resources\images\ic-login.svg" alt="login"></a>
+        <a href="#" title="ColmarAcadaemy"> <img src="resources/images/ic-logo.svg" alt="Colmar Academy Lion"></a>
+        <a href="#" title="On campus"><img src="resources/images/ic-on-campus.svg" alt="on campus student desk"></a>
+        <a href="#" title="Online"><img src="resources\images\ic-online.svg" alt="online learning"></a>
+        <a href="#" title="Sign in"><img src="resources\images\ic-login.svg" alt="login"></a>
     </nav>
  </header>
 
 <!--main-container-->
-<div class="main-container">
+<div class="main-container" role="presentation">
 
 <!--container1-->
      <div class="container1">
@@ -49,7 +49,7 @@
     </div>
 
 <!--container 2-->
-     <div class="container2">
+     <div class="container2" role="presentation">
       <div class="item2-1">
          <img src="resources\images\information-main.jpg" alt="male reading information about course options">
          <h1>It doesn't hurt to keep practicing</h1>
@@ -66,7 +66,7 @@
           <div class="item-description">
               <h2 class="item-description">Orientation date</h2>
               <p class="item-description">Tue 10/11 & Wed 10/12: 8am-3pm</p>
-              <p class="item-description"> <a href="#">Read more</a></p>
+              <p class="item-description"> <a href="#" title="Read more about our orientation dates">Read more</a></p>
             </div>
          </div>
          <div class="item2-3-b">
@@ -74,7 +74,7 @@
            <div class="item-description">
             <h2 class="item-description">Our campus</h2>
             <p class="item-description">Find which campus is close by you</p>
-            <p class="item-description"><a href="#">Read more</a></p>
+            <p class="item-description"><a href="#" title="Find out more about our campus">Read more</a></p>
             </div>
          </div>
          <div class="item2-4-c">
@@ -82,7 +82,7 @@
           <div class="item-description">
             <h2 class="item-description">Our guest lecture</h2>
             <p class="item-description">Join a keynote with Oliver Sack about music in medical treatment</p>
-            <p class="item-description"><a href="#">Read more</a></p>
+            <p class="item-description"><a href="#" title="Our guest lecture">Read more</a></p>
             </div>
          </div>
       </div>
@@ -96,7 +96,7 @@
           <div class="mobile-item-description">
             <h2>Orientation date</h2>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <p><a href="#">Read more</a></p>
+            <p><a href="#" title="Read more about our orientation dates">Read more</a></p>
           </div>
          </div>
          <div class="mobile-item">
@@ -104,7 +104,7 @@
             <div class="mobile-item-description">
             <h2>Our campus</h2>
             <p>Find which campus is close by you</p>
-            <p><a href="#">Read more</a></p>
+            <p><a href="#" title="Find out more about our campus">Read more</a></p>
           </div>
          </div>
          <div class="mobile-item">
@@ -112,7 +112,7 @@
             <div class="mobile-item-description">
             <h2>Our guest lecture</h2>
             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-            <p><a href="#">Read more</a></p>
+            <p><a href="#" title="Our guest lecture">Read more</a></p>
           </div>
          </div>
       </div>
@@ -202,7 +202,7 @@
   </div>
   <div class="thesis-container">
    <div class="item-video">
-      <video src="resources\videos\thesis.mp4" controls autoplay poster="posterimage.jpg">
+      <video aria-lable="Student showcase video, video showing changing colours in a building throughout the day" src="resources\videos\thesis.mp4" controls autoplay poster="posterimage.jpg">
       </video>
       <div class="video-description">
        <h1>Reimaging urban</h1>
@@ -235,8 +235,8 @@
 <footer>
   <div>@2016 Colmar Acadamy All rights reserved</div>
   <div class="footer-links">
-    <a href="#">Terms</a>
-    <a href="#">Privacy</a>
+    <a href="#" title="Terms">Terms</a>
+    <a href="#" title="Privacy">Privacy</a>
   </div>
 </footer>
   </body>
