--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span class="moreweight">COLMAR</span>
         <span class="lightweight">ACADEMY</span>
       </div>
-      <ul class="main" role="presentation">
+      <ul class="main" role="navigation">
         <li><a href="#" title="On campus">On campus</a></li>
         <li><a href="#" title="Online">Online</a></li>
         <li><a href="#" title="For companies">For companies</a></li>
@@ -66,7 +66,7 @@
           <div class="item-description">
               <h2 class="item-description">Orientation date</h2>
               <p class="item-description">Tue 10/11 & Wed 10/12: 8am-3pm</p>
-              <p class="item-description"> <a href="#" title="Read more about our orientation dates">Read more</a></p>
+              <p class="item-description"> <a href="#" title="Read more about our orientation dates" role="link">Read more</a></p>
             </div>
          </div>
          <div class="item2-3-b">
@@ -74,7 +74,7 @@
            <div class="item-description">
             <h2 class="item-description">Our campus</h2>
             <p class="item-description">Find which campus is close by you</p>
-            <p class="item-description"><a href="#" title="Find out more about our campus">Read more</a></p>
+            <p class="item-description"><a href="#" title="Find out more about our campus" role="link">Read more</a></p>
             </div>
          </div>
          <div class="item2-4-c">
@@ -82,7 +82,7 @@
           <div class="item-description">
             <h2 class="item-description">Our guest lecture</h2>
             <p class="item-description">Join a keynote with Oliver Sack about music in medical treatment</p>
-            <p class="item-description"><a href="#" title="Our guest lecture">Read more</a></p>
+            <p class="item-description"><a href="#" title="Our guest lecture" role="link">Read more</a></p>
             </div>
          </div>
       </div>
@@ -92,27 +92,27 @@
 
     <div class="mobile-container2">
         <div class="mobile-item">
-          <img src="resources\images\information-orientation-mobile.jpg" alt="Orientation date, image of people walkin on cobble stone">
+          <img src="resources\images\information-orientation-mobile.jpg" alt="Orientation date, image of people walkin on cobble stone" role="presentation">
           <div class="mobile-item-description">
             <h2>Orientation date</h2>
             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-            <p><a href="#" title="Read more about our orientation dates">Read more</a></p>
+            <p><a href="#" title="Read more about our orientation dates" role="link">Read more</a></p>
           </div>
          </div>
          <div class="mobile-item">
-            <img src="resources\images\information-campus-mobile.jpg" alt="Our campus, image of library">
+            <img src="resources\images\information-campus-mobile.jpg" alt="Our campus, image of library" role="presentation">
             <div class="mobile-item-description">
             <h2>Our campus</h2>
             <p>Find which campus is close by you</p>
-            <p><a href="#" title="Find out more about our campus">Read more</a></p>
+            <p><a href="#" title="Find out more about our campus" role="link">Read more</a></p>
           </div>
          </div>
          <div class="mobile-item">
-            <img src="resources\images\information-guest-lecture-mobile.jpg" alt="Our guest lectures, image showing guest lecture">
+            <img src="resources\images\information-guest-lecture-mobile.jpg" alt="Our guest lectures, image showing guest lecture" role="presentation">
             <div class="mobile-item-description">
             <h2>Our guest lecture</h2>
             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-            <p><a href="#" title="Our guest lecture">Read more</a></p>
+            <p><a href="#" title="Our guest lecture" role="link">Read more</a></p>
           </div>
          </div>
       </div>
@@ -124,7 +124,7 @@
         </div>
         <div class="course-list">
           <div class="course-items">
-          <img src="resources\images\course-software.jpg" alt="Software engineering course">
+          <img src="resources\images\course-software.jpg" alt="Software engineering course" role="presentation">
            <div class="course-description">
              <h2>Software engineering</h2>
              <h3>courses</h3>
@@ -132,7 +132,7 @@
            </div>
          </div>
         <div class="course-items">
-          <img src="resources\images\course-computer-art.jpg" alt="Computer art course,person holding phone">
+          <img src="resources\images\course-computer-art.jpg" alt="Computer art course,person holding phone" role="presentation">
          <div class="course-description">
            <h2>Computer art</h2>
            <h3>courses</h3>
@@ -140,7 +140,7 @@
          </div>
         </div>
         <div class="course-items">
-          <img src="resources\images\course-design.jpg" alt="Design course, person with camera">
+          <img src="resources\images\course-design.jpg" alt="Design course, person with camera" role="presentation">
           <div class="course-description">
             <h2>Design</h2>
             <h3>courses</h3>
@@ -148,7 +148,7 @@
           </div>
         </div>
         <div class="course-items">
-          <img src="resources\images\course-data.jpg" alt="Data course, laptop with data graph">
+          <img src="resources\images\course-data.jpg" alt="Data course, laptop with data graph" role="presentation">
           <div class="course-description">
             <h2>Data</h2>
             <h3>courses</h3>
@@ -156,7 +156,7 @@
           </div>
         </div>
         <div class="course-items">
-          <img src="resources\images\course-business.jpg" alt="Business course. chess board">
+          <img src="resources\images\course-business.jpg" alt="Business course. chess board" role="presentation">
           <div class="course-description">
             <h2>Business</h2>
             <h3>courses</h3>
@@ -164,7 +164,7 @@
           </div>
         </div>
         <div class="course-items">
-          <img src="resources\images\course-marketing.jpg" alt="Marketing course, person with analysing watch">
+          <img src="resources\images\course-marketing.jpg" alt="Marketing course, person with analysing watch" role="presentation">
           <div class="course-description">
             <h2>Marketing</h2>
             <h3>courses</h3>
@@ -176,22 +176,22 @@
       <!--mobile-container3-->
       <div class="mobile-course-section">
         <div class="mobile-course-list">
-          <div class="mobile-course-items">
+          <div class="mobile-course-items" role="link">
              <h2>Software engineering</h2>
           </div>
-          <div class="mobile-course-items">
+          <div class="mobile-course-items" role="link">
            <h2>Computer art</h2>
           </div>
-        <div class="mobile-course-items">
+        <div class="mobile-course-items" role="link">
             <h2>Design</h2>
           </div>
-        <div class="mobile-course-items">
+        <div class="mobile-course-items" role="link">
             <h2>Data</h2>
         </div>
-        <div class="mobile-course-items">
+        <div class="mobile-course-items" role="link">
             <h2>Business</h2>
           </div>
-        <div class="mobile-course-items">
+        <div class="mobile-course-items" role="link">
             <h2>Marketing</h2>
           </div>
         </div>
@@ -202,7 +202,7 @@
   </div>
   <div class="thesis-container">
    <div class="item-video">
-      <video aria-lable="Student showcase video, video showing changing colours in a building throughout the day" src="resources\videos\thesis.mp4" controls autoplay poster="posterimage.jpg">
+      <video alt="Student showcase video, video showing changing colours in a building throughout the day" src="resources\videos\thesis.mp4" controls autoplay poster="posterimage.jpg">
       </video>
       <div class="video-description">
        <h1>Reimaging urban</h1>
